Fully Kiosk 브라우저를 위한 URL 경로 기반 디바이스 ID 추출 기능 추가

--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
     </style>
     
     <title>Dunlopillo SPA</title>
+    
+    <!-- URL 경로 기반 디바이스 ID 핸들러 (Fully Kiosk 호환) -->
+    <script src="device-id-handler.js"></script>
   </head>
   <body>
     <!-- 프리로딩 스크린 -->
